--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "axios": "^0.19.1",
+    "csurf": "^1.11.0",
     "jade": "^1.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
