--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:classic": "nest start",
+    "start": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -24,6 +24,7 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "axios": "^0.19.1",
+    "cookie-parser": "^1.4.4",
     "csurf": "^1.11.0",
     "jade": "^1.11.0",
     "reflect-metadata": "^0.1.13",
